--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
-            <test name="test.AllTests" todir="${junit.output.dir}"/>
+            <test name="test.iss.AllTests" todir="${junit.output.dir}"/>
             <classpath refid="ecommerce_iss.classpath"/>
         </junit>
     </target>
@@ -83,8 +83,8 @@
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
-            <test name="test.AllTests" todir="${junit.output.dir}"/>
-            <test name="test.ShoppingCartTest" todir="${junit.output.dir}"/>
+            <test name="test.iss.AllTests" todir="${junit.output.dir}"/>
+            <test name="test.iss.ShoppingCartTest" todir="${junit.output.dir}"/>
             <classpath refid="ecommerce_iss.classpath"/>
         </junit>
     </target>
